Mejoras en los javascript

--- a/PreOrclFrontEnd/Views/Modals/_SmallModalPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Modals/_SmallModalPartial.cshtml
@@ -5,7 +5,7 @@
 <div class="modal fade" id="smallmodal" tabindex="-1" role="dialog" aria-labelledby="smallmodalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content" id="smallModalPartial">
-            <div class="loader" style="margin-left:50%;"></div>
+            @*<div class="loader" style="margin-left:50%;"></div>*@
         </div>
     </div>
 </div>
