--- a/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
@@ -29,8 +29,8 @@
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Seguridad</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-table"></i><a href="tables-basic.html">Roles</a></li>
-                        <li><i class="fa fa-table"></i><a href="tables-data.html">Usuarios</a></li>
+                        <li><i class="fa fa-table"></i><a href="@Url.Action("Index","Roles")">Roles</a></li>
+                        <li><i class="fa fa-table"></i><a href="#">Usuarios</a></li>
                     </ul>
                 </li>
                 @* <li class="menu-item-has-children dropdown">
