--- a/PreOrclFrontEnd/Views/Shared/_Layout.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@ if it's not present, don't show loader */
             width: 100%;
             height: 100%;
             z-index: 9999;
-            background: url(@Url.Content("~/images/balanza.gif")) center no-repeat rgba(255, 255, 255, 0.42);
+            background: url(@Url.Content("~/images/balanzasinfondo.gif")) center no-repeat rgba(255, 255, 255, 0.42);
         }
     </style>
 
