Mejoras en la seguridad

--- a/PreOrclFrontEnd/Views/Home/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Home/Index.cshtml
@@ -120,7 +120,7 @@
             <div class="col-md-12 col-lg-4">
                 <div class="card">
                     <div class="card-body">
-                        @await Component.InvokeAsync("ListaComponent")
+                        @*@await Component.InvokeAsync("ListaComponent")*@
                     </div>
                 </div>
             </div>
