Mejoras en visualización

--- a/PreOrclFrontEnd/Views/Auth/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/Index.cshtml
@@ -91,7 +91,7 @@
                         <div class="social-login-content">
                             <div class="social-button">
                                 <a class="btn btn-default" asp-controller="Auth" asp-action="Micro">Iniciar sesión con cuenta de Microsoft</a>
-                                <a class="btn btn-default" asp-action="#">Iniciar sesión con cuenta de Google</a>
+                                @*<a class="btn btn-default" asp-action="#">Iniciar sesión con cuenta de Google</a>*@
                             </div>
                         </div>
                         @*<div class="register-link m-t-15 text-center">
