--- a/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
+++ b/PreOrclFrontEnd/Views/Shared/_LeftPanelPartial.cshtml
@@ -14,16 +14,17 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-cogs"></i>Registros</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-puzzle-piece"></i><a asp-area="" asp-controller="SisPerPersonas" asp-action="Index">Personas</a></li>
+                        <li><i class="fa fa-id-badge"></i><a asp-area="" asp-controller="Casos" asp-action="Index">Casos</a></li>
                         <li><i class="fa fa-id-badge"></i><a href="#">Imputados</a></li>
                         <li><i class="fa fa-bars"></i><a href="#">Jurisprudencia</a></li>
 
                         @*<li><i class="fa fa-id-card-o"></i><a href="ui-cards.html">Cards</a></li>
-                <li><i class="fa fa-exclamation-triangle"></i><a href="ui-alerts.html">Alerts</a></li>
-                <li><i class="fa fa-spinner"></i><a href="ui-progressbar.html">Progress Bars</a></li>
-                <li><i class="fa fa-fire"></i><a href="ui-modals.html">Modals</a></li>
-                <li><i class="fa fa-book"></i><a href="ui-switches.html">Switches</a></li>
-                <li><i class="fa fa-th"></i><a href="ui-grids.html">Grids</a></li>
-                <li><i class="fa fa-file-word-o"></i><a href="ui-typgraphy.html">Typography</a></li>*@
+        <li><i class="fa fa-exclamation-triangle"></i><a href="ui-alerts.html">Alerts</a></li>
+        <li><i class="fa fa-spinner"></i><a href="ui-progressbar.html">Progress Bars</a></li>
+        <li><i class="fa fa-fire"></i><a href="ui-modals.html">Modals</a></li>
+        <li><i class="fa fa-book"></i><a href="ui-switches.html">Switches</a></li>
+        <li><i class="fa fa-th"></i><a href="ui-grids.html">Grids</a></li>
+        <li><i class="fa fa-file-word-o"></i><a href="ui-typgraphy.html">Typography</a></li>*@
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
