--- a/PreOrclFrontEnd/Views/Casos/Edit.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Edit.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewData["Title"] = "Create";
 
-    List<PreOrclFrontEnd.Utilidades.ListItem> listaCategorias = (ViewBag.listaCategorias as List<PreOrclFrontEnd.Utilidades.ListItem>);
-    List<PreOrclFrontEnd.Utilidades.ListItem> listaTipos = (ViewBag.listaTipos as List<PreOrclFrontEnd.Utilidades.ListItem>);
+    List<SelectListItem> listaCategorias = (ViewBag.listaCategorias as List<SelectListItem>);
+    List<SelectListItem> listaTipos = (ViewBag.listaTipos as List<SelectListItem>);
 
 
 }
